--- a/modulo 4/modulo4/modulo4/App.xaml
+++ b/modulo 4/modulo4/modulo4/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="modulo4.App"
+﻿<Application x:Class="VeterinariaClientes.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:modulo4"
+             xmlns:local="clr-namespace:VeterinariaClientes"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
