--- a/modulo 4/modulo4/modulo4/MainWindow.xaml
+++ b/modulo 4/modulo4/modulo4/MainWindow.xaml
@@ -1,33 +1,37 @@
-﻿<Window x:Class="modulo4.MainWindow"
+﻿<Window x:Class="VeterinariaClientes.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:modulo4"
+        xmlns:local="clr-namespace:VeterinariaClientes"
         mc:Ignorable="d"
         Title="Clientes" Height="444.961" Width="701.358">
     <Window.Background>
         <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.HotTrackColorKey}}"/>
     </Window.Background>
-    <Grid Margin="0,0,-8,0" Loaded="Grid_Loaded">
-        <DataGrid x:Name="dataGrid" HorizontalAlignment="Left" Margin="10,238,0,0" VerticalAlignment="Top" Height="166" Width="668"/>
-        <Label x:Name="label" Content="Nombre:" HorizontalAlignment="Left" Margin="55,27,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="label1" Content="Apellido Paterno:" HorizontalAlignment="Left" Margin="10,76,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="label2" Content="Apellido Materno:" HorizontalAlignment="Left" Margin="6,121,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="label3" Content="Telefono:" HorizontalAlignment="Left" Margin="399,27,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="label4" Content="Email:" HorizontalAlignment="Left" Margin="416,75,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="label5" Content="Direccion:" HorizontalAlignment="Left" Margin="395,120,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="label6" Content="Status:" HorizontalAlignment="Left" Margin="412,163,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" Margin="151,30,0,0" TextWrapping="Wrap" Text="nombre" VerticalAlignment="Top" Width="204" GotFocus="textBox_GotFocus"/>
-        <TextBox x:Name="textBox1" HorizontalAlignment="Left" Height="23" Margin="151,79,0,0" TextWrapping="Wrap" Text="apellido paterno" VerticalAlignment="Top" Width="204" GotFocus="textBox1_GotFocus"/>
-        <TextBox x:Name="textBox2" HorizontalAlignment="Left" Height="23" Margin="151,124,0,0" TextWrapping="Wrap" Text="apellido materno" VerticalAlignment="Top" Width="204" GotFocus="textBox2_GotFocus"/>
-        <TextBox x:Name="textBox3" HorizontalAlignment="Left" Height="23" Margin="500,30,0,0" TextWrapping="Wrap" Text="telefono" VerticalAlignment="Top" Width="180" GotFocus="textBox3_GotFocus"/>
-        <TextBox x:Name="textBox4" HorizontalAlignment="Left" Height="23" Margin="500,79,0,0" TextWrapping="Wrap" Text="email" VerticalAlignment="Top" Width="180" GotFocus="textBox4_GotFocus"/>
-        <TextBox x:Name="textBox5" HorizontalAlignment="Left" Height="23" Margin="500,125,0,0" TextWrapping="Wrap" Text="direccion" VerticalAlignment="Top" Width="180" GotFocus="textBox5_GotFocus"/>
-        <CheckBox x:Name="checkBox" Content="Vigente" HorizontalAlignment="Left" Margin="500,169,0,0" VerticalAlignment="Top" IsChecked="True"/>
-        <Button x:Name="button" Content="Agregar" HorizontalAlignment="Left" Margin="443,213,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button x:Name="button_Copy" Content="Actualizar" HorizontalAlignment="Left" Margin="523,213,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button x:Name="button_Copy1" Content="Eliminar" HorizontalAlignment="Left" Margin="603,213,0,0" VerticalAlignment="Top" Width="75"/>
+    <Grid Margin="0,0,-8,0" Loaded="DgGrid_Loaded">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="56*"/>
+            <ColumnDefinition Width="645*"/>
+        </Grid.ColumnDefinitions>
+        <DataGrid x:Name="DgGrid" HorizontalAlignment="Left" Margin="10,238,0,0" VerticalAlignment="Top" Height="166" Width="668" Grid.ColumnSpan="2" Loaded="DgGrid_Loaded_1"/>
+        <Label x:Name="LblNombre" Content="Nombre:" HorizontalAlignment="Left" Margin="55,27,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+        <Label x:Name="LblApp" Content="Apellido Paterno:" HorizontalAlignment="Left" Margin="10,76,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+        <Label x:Name="Lblapm" Content="Apellido Materno:" HorizontalAlignment="Left" Margin="6,121,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+        <Label x:Name="LblTel" Content="Telefono:" HorizontalAlignment="Left" Margin="343,27,0,0" VerticalAlignment="Top" Grid.Column="1"/>
+        <Label x:Name="LblEmail" Content="Email:" HorizontalAlignment="Left" Margin="360,75,0,0" VerticalAlignment="Top" Grid.Column="1"/>
+        <Label x:Name="LblDir" Content="Direccion:" HorizontalAlignment="Left" Margin="339,120,0,0" VerticalAlignment="Top" Grid.Column="1"/>
+        <Label x:Name="LblStatus" Content="Status:" HorizontalAlignment="Left" Margin="356,163,0,0" VerticalAlignment="Top" Grid.Column="1"/>
+        <TextBox x:Name="TxtNombre" HorizontalAlignment="Left" Height="23" Margin="95,30,0,0" TextWrapping="Wrap" Text="nombre" VerticalAlignment="Top" Width="204" GotFocus="TxtNombre_GotFocus" Grid.Column="1"/>
+        <TextBox x:Name="Txtapp" HorizontalAlignment="Left" Height="23" Margin="95,79,0,0" TextWrapping="Wrap" Text="apellido paterno" VerticalAlignment="Top" Width="204" GotFocus="Txtapp_GotFocus" Grid.Column="1"/>
+        <TextBox x:Name="TxtApm" HorizontalAlignment="Left" Height="23" Margin="95,124,0,0" TextWrapping="Wrap" Text="apellido materno" VerticalAlignment="Top" Width="204" GotFocus="TxtApm_GotFocus" Grid.Column="1"/>
+        <TextBox x:Name="TxtTelefono" HorizontalAlignment="Left" Height="23" Margin="444,30,0,0" TextWrapping="Wrap" Text="telefono" VerticalAlignment="Top" Width="180" GotFocus="TxtTelefono_GotFocus" Grid.Column="1"/>
+        <TextBox x:Name="TxtEmail" HorizontalAlignment="Left" Height="23" Margin="444,79,0,0" TextWrapping="Wrap" Text="email" VerticalAlignment="Top" Width="180" GotFocus="TxtEmail_GotFocus" Grid.Column="1"/>
+        <TextBox x:Name="TxtDireccion" HorizontalAlignment="Left" Height="23" Margin="444,125,0,0" TextWrapping="Wrap" Text="direccion" VerticalAlignment="Top" Width="180" GotFocus="TxtDireccion_GotFocus" Grid.Column="1"/>
+        <CheckBox x:Name="CbxStatus" Content="Vigente" HorizontalAlignment="Left" Margin="444,169,0,0" VerticalAlignment="Top" IsChecked="True" Grid.Column="1"/>
+        <Button x:Name="BtnAgregar" Content="Agregar" HorizontalAlignment="Left" Margin="387,213,0,0" VerticalAlignment="Top" Width="75" Grid.Column="1" Click="BtnAgregar_Click"/>
+        <Button x:Name="BtnActualizar" Content="Actualizar" HorizontalAlignment="Left" Margin="467,213,0,0" VerticalAlignment="Top" Width="75" Grid.Column="1"/>
+        <Button x:Name="BtnEliminar" Content="Eliminar" HorizontalAlignment="Left" Margin="547,213,0,0" VerticalAlignment="Top" Width="75" Grid.Column="1"/>
 
     </Grid>
 </Window>
